--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="about-container">
             <h1 class="name">
                 <span class="first-name">GABRIEL</span>
-                <img src="/images/dp.jpg" alt="Profile Picture" class="profile-pic" />
+                <img src="images/dp.jpg" alt="Profile Picture" class="profile-pic" />
                 <span class="last-name">DELGADO</span>
             </h1>
             
@@ -341,11 +341,12 @@
 
      
   </body>
-  <script src="script.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="/particles-slideshow/slideshow.js"></script>
-  <script src="/particles-slideshow/particles_contact.js"></script>
+  <script src="script.js"></script>
+  <script src="particles-slideshow/slideshow.js"></script>
+  <script src="particles-slideshow/particles_contact.js"></script>
 </html>
+
 
 
 
