--- a/index.html
+++ b/index.html
@@ -341,11 +341,16 @@
 
      
   </body>
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="script.js"></script>
-  <script src="particles-slideshow/slideshow.js"></script>
-  <script src="particles-slideshow/particles_contact.js"></script>
+ <!-- Scripts -->
+    <!-- 1. AOS first -->
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <!-- 2. Local JS files with relative paths -->
+    <script src="particles-slideshow/slideshow.js"></script>
+    <script src="particles-slideshow/particles_contact.js"></script>
+    <!-- 3. Your main script last -->
+    <script src="script.js"></script>
 </html>
+
 
 
 
